--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "devel",
+  "name": "devil",
   "version": "1.0.0",
-  "description": "a typescript-starter project",
+  "description": "Dev Integrated Library",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
   "repository": "https://github.com/YOUR_GITHUB_USER_NAME/devel",
   "license": "MIT",
   "keywords": [],
+  "bin":{
+    "summon":"bin/index.js"
+  },
   "scripts": {
+    "summon": "echo \"working on it\"",
     "build": "run-p build:*",
     "build:main": "tsc -p tsconfig.json",
+    "build:inject": "rsync -av --progress src/lib/ bin/devil-src --exclude *.spec.ts",
     "build:module": "tsc -p tsconfig.module.json",
     "fix": "run-s fix:*",
     "fix:prettier": "prettier \"src/**/*.ts\" --write",
@@ -41,7 +46,11 @@
   "engines": {
     "node": ">=10"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@types/node": "^18.15.11",
+    "chalk": "^5.2.0",
+    "fs-extra": "^11.1.1"
+  },
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
