--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "devil",
+  "name": "@thunderducky/devil",
   "version": "1.0.0",
   "description": "Dev Integrated Library",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
-  "repository": "https://github.com/YOUR_GITHUB_USER_NAME/devel",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/YOUR_GITHUB_USER_NAME/devel.git"
+  },
   "license": "MIT",
   "keywords": [],
-  "bin":{
-    "summon":"bin/index.js"
+  "bin": {
+    "summon": "bin/index.js"
   },
   "scripts": {
     "summon": "echo \"working on it\"",
@@ -109,5 +112,10 @@
     "exclude": [
       "**/*.spec.js"
     ]
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/YOUR_GITHUB_USER_NAME/devel/issues"
+  },
+  "homepage": "https://github.com/YOUR_GITHUB_USER_NAME/devel#readme",
+  "author": "Eric Scott"
 }
