--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "summon": "echo \"working on it\"",
     "build": "run-p build:*",
     "build:main": "tsc -p tsconfig.json",
-    "build:inject": "rsync -av --progress src/lib/ bin/devil-src --exclude *.spec.ts",
+    "not-build:inject": "rsync -av --progress src/lib/ bin/devil-src --exclude *.spec.ts",
     "build:module": "tsc -p tsconfig.module.json",
     "fix": "run-s fix:*",
     "fix:prettier": "prettier \"src/**/*.ts\" --write",
@@ -51,7 +51,7 @@
   },
   "dependencies": {
     "@types/node": "^18.15.11",
-    "chalk": "^5.2.0",
+    "chalk": "^4.1.2",
     "fs-extra": "^11.1.1"
   },
   "devDependencies": {
